--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.1.0",
+		"html2canvas": "^1.4.1",
+		"svelte-qrcode-image": "^1.0.0-rc.2"
+	}
 }
