--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^4.0.1",
 		"@sveltejs/adapter-vercel": "^5.1.0",
 		"html2canvas": "^1.4.1",
 		"svelte-qrcode-image": "^1.0.0-rc.2"
